Change viewport height unit of container. Change viewport height of container from dvh to svh to prevent dynamic changes during gameplay and portions of the game potentially being hidden on mobile browsers.

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
      justify-content: center;
      align-items: center;
   position: relative;
-  height: 100dvh;
+  height: 100svh;
   box-sizing: border-box;  
 }
 
@@ -178,11 +178,10 @@ body {
 
 .container {
    position: relative;
-   flex-direction: column;
       display: flex;
-     justify-content: space-between;
+     justify-content: center;
      align-items: center;
-   width: 80%;
+   width: 100%;
    height: 100%;
    border: 10px solid red;
 }
@@ -193,7 +192,7 @@ body {
   box-shadow: 0px 0px 3px 3px rgb(50, 50, 50);
   width: 50%;
   height: 35%;
-  margin-top: 25%;
+  /* margin-top: 25%; */
 }
 
 h1 {
@@ -201,7 +200,10 @@ h1 {
 }
 
 .shark {
-   width: 100px;
-   height: 100px;
+   position: absolute;
+   top: 0;
+   right: 0;
+   width: 5em;
+   height: 5em;
    background-color: brown;
 }
